<resources>
    <string name="app_name">商学院</string>

    <string name="app_shared_preferences">TraderAcademy_2016</string>

    <string name="login">登录</string>
    <string name="phone_num">手机号</string>
    <string name="phone_hint">11位手机号码</string>
    <string name="password">密码</string>
    <string name="password_hint">4-16位密码</string>
    
    <string name="meun_notice">公告</string>
    
    
    <string name="home">首页</string>
    <string name="learn">学习</string>
    <string name="exam">考试</string>
    <string name="user">个人</string>
</resources>
